--- a/VTWorkspace/VT/src/main/resources/assets/vtweaked/lang/en_US.lang
+++ b/VTWorkspace/VT/src/main/resources/assets/vtweaked/lang/en_US.lang
@@ -27,7 +27,7 @@ item.ingotBoron.name=Boron Ingot
 #Blocks
 tile.oreCopper.name=Copper Ore
 tile.oreTin.name=Tin Ore
-tile.oretAluminum.name=Aluminum Ore
+tile.oreAluminum.name=Aluminum Ore
 tile.oreErbium.name=Erbium Ore
 tile.oreEuropium.name=Europium Ore
 tile.oreLanthanum.name=Lanthanum Ore
